# Djangocourse

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  pyproject.toml
app/: admin.py  forms.py  managers.py  models.py  urls.py  views.py
app/migrations/: 0001_initial.py  0002_create_superuser.py  0003_article_creator_alter_article_word_count.py  0004_alter_userprofile_managers_alter_userprofile_email.py
djangocourse/: settings.py  urls.py
templates/app/: base.html  create_article.html  delete_article.html  home.html  update_article.html
templates/app/layouts/: base_form.html
